--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "version": "1.1.0",
   "description": "Web+DB用語統一のtextlintルール",
   "main": "lib/textlint-rule-web-plus-db.js",
+  "browser": "build/textlint-rule-web-plus-db.js",
   "files": [
     "lib",
     "dict",
